--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,42 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.book-list {
+  margin: 50px 25px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.book {
+  border: 1.8px solid #36459a;
+  padding: 30px 15px;
+  width: 450px;
+  margin: 0 auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.book img {
+  width: 300px;
+}
+
+.book-title {
+  font-size: 27px;
+}
+
+.line {
+  border-bottom: 2.5px solid #272829;
+}
+
+.list {
+  list-style: none;
+}
+
+.btn {
+  margin-top: 20px;
+  background-color: #102136;
+  border: none;
+  padding: 15px 65px;
+  color: #fff;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
 }
